--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -3,6 +3,8 @@
 .categories {
   ul {
     display: flex;
+    flex-wrap: wrap;
+    margin-top: -10px;
 
     li {
       background-color: #f9f9f9;
@@ -13,6 +15,7 @@
       cursor: pointer;
       transition: background-color 0.1s ease-in-out;
       @include noselect();
+      margin-top: 10px;
 
       &:hover {
         background-color: darken(#f9f9f9, 2%);
