--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -33,7 +33,7 @@ body {
 
   &__top {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
   }
 }
@@ -44,7 +44,7 @@ body {
 
   &--cart {
     max-width: 820px;
-    margin: 90px auto;
+    margin: 30px auto 90px;
 
     .content__title {
       margin: 0;
